--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -24,8 +24,12 @@
     position: absolute;
     left: 0;
     top: 42px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: baseline;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
     z-index: 2;
 }
 
