--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -76,7 +76,8 @@
 {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     outline: none;
 }
 
@@ -250,6 +251,12 @@ body{
     .heading--h1--commande
     {
         margin-left: 30%;
+
+    }
+    .heading--h2--resto
+    {
+        width: 60%;
+        margin-left: 20%;
     }
     .text--footer
     {
