--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -4,12 +4,15 @@
 
     &__logo{
         height: 17px;
-        filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(65deg) brightness(111%) contrast(101%);
+        -webkit-filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(65deg) brightness(111%) contrast(101%);
+                filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(65deg) brightness(111%) contrast(101%);
     }
     &__nav{
         margin-top: 13px;
     }
     &__li{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
         margin-bottom: 5px;
         &__a{
@@ -39,7 +42,9 @@
     }
     .footer__li
     {
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
 }
 
