--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -7,14 +7,20 @@
     top: 0;
     left: 0;
     background-color: white;
-    animation: loader-page 3000ms forwards;
+    -webkit-animation: loader-page 3000ms forwards;
+            animation: loader-page 3000ms forwards;
     &__logo
     {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         margin-top: 300px;
         margin-bottom: 40px;
-        animation: loader-progress 2250ms 250ms both;
+        -webkit-animation: loader-progress 2250ms 250ms both;
+                animation: loader-progress 2250ms 250ms both;
     }
     &__progress
     {
@@ -22,14 +28,20 @@
         height: 30px;
         margin: auto;
         border: 1px solid $primary-color;
-        animation: loader-progress 2250ms 250ms both;
+        -webkit-animation: loader-progress 2250ms 250ms both;
+                animation: loader-progress 2250ms 250ms both;
         &__barre
         {
             height: 100%;
             width: 100%;
+            background: -webkit-gradient(linear, left top, right top, from($primary-color), to($secondary-color));
+            background: -o-linear-gradient(left, $primary-color, $secondary-color);
             background: linear-gradient(to right, $primary-color, $secondary-color);
-            transform-origin: 0% 50%;
-            animation: loader-barre 2250ms 250ms both;
+            -webkit-transform-origin: 0% 50%;
+                -ms-transform-origin: 0% 50%;
+                    transform-origin: 0% 50%;
+            -webkit-animation: loader-barre 2250ms 250ms both;
+                    animation: loader-barre 2250ms 250ms both;
         }
     }
 }
@@ -52,7 +64,8 @@
         top: -4px;
         left: 0;
         opacity: 0.3;
-        box-shadow: 0px 3px 3px #858585;
+        -webkit-box-shadow: 0px 3px 3px #858585;
+                box-shadow: 0px 3px 3px #858585;
 
     }
 }
@@ -69,8 +82,12 @@
     &__li
     {
         position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         padding-left: 40px;
         height: 70px;
         margin-bottom: 15px;
@@ -81,7 +98,8 @@
                 background-color: lighten($primary-color, 35%);
                 & .ico--fonction
                 {
-                    filter: invert(43%) sepia(66%) saturate(4357%) hue-rotate(245deg) brightness(93%) contrast(85%);
+                    -webkit-filter: invert(43%) sepia(66%) saturate(4357%) hue-rotate(245deg) brightness(93%) contrast(85%);
+                            filter: invert(43%) sepia(66%) saturate(4357%) hue-rotate(245deg) brightness(93%) contrast(85%);
                 }
                 
             }
@@ -93,17 +111,27 @@
             left: -12px;
             position: absolute;
             border-radius: 50px;
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
             background-color: $primary-color;
             color: white;
         }
         &__div
         {
             width: 40px;
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            align-items: center;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
             
         }
 
@@ -121,28 +149,29 @@
         &__top{
             height: 170px;
             border-radius: 15px 15px 0 0;
-            box-shadow: $box-shadow; 
+            -webkit-box-shadow: $box-shadow;
+                    box-shadow: $box-shadow; 
             &__1{
                 position: relative;
                 background: url(/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) no-repeat;  
                 background-size: 105%;
-                background-position: bottom center;
+                background-position: center bottom;
             }
             &__2{
                 position: relative;
                 background: url(/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) no-repeat;  
                 background-size: cover;
-                background-position: center -145px;
+                background-position: center 60%;
             }
             &__3{
                 background: url(/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_light.jpg) no-repeat;  
                 background-size: cover;
-                background-position: center -50px;
+                background-position: center 95%;
             }
             &__4{
                 background: url(/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) no-repeat;  
                 background-size: cover;
-                background-position: center -55px;
+                background-position: center 95%;
             }
         }
         &__bottom{
@@ -150,7 +179,8 @@
             position: relative;
             background: white;
             border-radius: 0 0 15px 15px;
-            box-shadow: $box-shadow; 
+            -webkit-box-shadow: $box-shadow;
+                    box-shadow: $box-shadow; 
             padding: 15px 20px 15px 10px;
             &__heart /* La div est de même taille que les deux svg coeurs qu'elle contient en absolute */
             {
@@ -180,24 +210,31 @@
 .nouveau{
     width: 80px;
     height: 29px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: absolute;
     right: 15px;
     top: 13px;
     background-color: $third-color;
     border-radius: 2px;
-    box-shadow: $box-shadow;
+    -webkit-box-shadow: 0 1px 10px black;
+            box-shadow: 0 1px 10px black;
 }
 
 /* MEDIA QUERIES */
 
-@media (min-width: 600px)
+@media (min-width: 650px)
 {
     .fonction
     {
-        max-width: 60%;
+        max-width: 50%;
         margin: auto;
     }
     .resto__ul
@@ -214,8 +251,12 @@
 {
     .fonction
     {
-        max-width: 40%;
+        max-width: 400px;
         margin: auto;
+    }
+    .resto__ul
+    {
+        max-width: 60%;
     }
     .resto__a__top
     {
